[package]
name = "compact-bar"
version = "0.1.0"
authors = ["Alexander Kenji Berthold <aks.kenji@protonmail.com>"]
edition = "2021"
license = "MIT"

[dependencies]
colored = "2"
ansi_term = "0.12"
unicode-width = "0.1.8"
zellij-tile = { version = "0.41.0", path = "../zellij/zellij-tile" }
zellij-tile-utils = { version = "0.41.0", path = "../zellij/zellij-tile-utils" }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
